--- a/src/components/forms/WhitepaperContactForm.astro
+++ b/src/components/forms/WhitepaperContactForm.astro
@@ -7,7 +7,7 @@ const inputFields = [
     label: "Customer name",
     type: "text",
   },
-  { name: "email", label: "Customer email", type: "email" },
+  { name: "customfield_13484", label: "Customer email", type: "email" },
   { name: "customfield_13584", label: "Job title", type: "text" },
   { name: "customfield_13368", label: "Company Name", type: "text" },
   { name: "customfield_13171", label: "Country", type: "text" },
