--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -56,19 +56,6 @@ const optimizedBackground = await getImage({
 });
 const { Content, headings } = await render();
 
-const summary =
-  String(
-    await remark()
-      .use(stripMarkdown, {
-        remove: ["heading"],
-      })
-      .process(body),
-  )
-    .split(" ")
-    .slice(0, 30)
-    .join(" ")
-    .replace("\\", "") + "...";
-
 let relatedPosts;
 if (related.length > 0) {
   relatedPosts = await getEntries(related);
@@ -90,7 +77,6 @@ if (related.length > 0) {
 
 <BaseLayout title={title + " | Blog"} description={description} image={image}>
   <main
-    data-pagefind-body
     data-pagefind-filter={`type:${collection}`}
     class="z-0"
   >
@@ -147,11 +133,11 @@ if (related.length > 0) {
           ))
         }
       </ul>
-      <span data-pagefind-meta="summary" class="hidden" data-pagefind-ignore
-        >{summary}</span
-      >
+      <div data-pagefind-excerpt>{description}</div>
     </section>
+    <div data-pagefind-body>
     <ArticleContent Content={Content} image={image} />
+    </div>
   </main>
   <aside
     class="container mx-auto max-w-5xl px-8 xl:px-0 mb-24"
