--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -36,6 +36,8 @@ const {
   },
 } = Astro.props;
 
+console.log(`PAGEFIND DEBUG for "${title}": Description is "${description}"`);
+
 const { data: author } = (await getEntry(
   authorRef,
 )) as CollectionEntry<"authors">;
@@ -85,7 +87,7 @@ if (related.length > 0) {
         "relative hero-background-image pt-32 pb-16  container mx-auto max-w-5xl px-8 xl:px-0 z-[-1]",
       ]}
     >
-      <h1 class="text-5xl font-bold mb-16 max-w-4xl">
+      <h1 data-pagefind-meta="title[title]" class="text-5xl font-bold mb-16 max-w-4xl">
         {title}
       </h1>
       <div class="flex items-center gap-6">
