another op chain

--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -28,7 +28,7 @@ const inputFields = [
       description && (
         <p
           class={
-            styles.description
+            styles?.description
               ? styles.description
               : "text-3xl text-white my-2 font-bold"
           }
