--- a/src/components/sections/CardGrid.astro
+++ b/src/components/sections/CardGrid.astro
@@ -3,51 +3,78 @@ import type { cardsSchema } from "@/content/schemas/sections";
 import { Icon } from "astro-icon/components";
 import type { z } from "astro/zod";
 import { marked } from "marked";
+import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 type Props = z.infer<typeof cardsSchema>;
-const { cards, styles, divider } = Astro.props;
+const { cards, styles, divider, gradient_border } = Astro.props;
 ---
 
 <ul class:list={["list-none flex flex-wrap", styles?.container]}>
   {
-    cards.map(async ({ icon, title, text, button, style }, index) => {
+    cards.map(async ({ icon, title, text, button, style, image }, index) => {
       const content = text ? await marked.parse(text) : null;
       const isLast = index === cards.length - 1;
+      const cardContent = (
+        <li class:list={[styles?.card, style]}>
+          {icon && <Icon name={icon} size={100} class="my-0" />}
+          {title && (
+            <h3 class:list={[styles?.card_title, "text-4xl my-5 z-50"]}>
+              {title}
+            </h3>
+          )}
+
+          <div
+            class:list={[
+              `text-xl prose-a:text-blue-300 text-inherit`,
+              styles?.content,
+            ]}
+            set:html={content}
+          />
+
+          {image && image.container && (
+            <div class="w-full h-2/5 mt-auto bg-[#D9D9D910] rounded-lg mb-4 flex justify-center items-center">
+              <CloudinaryImg
+                src={image.url}
+                alt={image.alt}
+                class="w-auto h-auto"
+              />
+            </div>
+          )}
+          {image && !image.container && (
+            <CloudinaryImg
+              src={image.url}
+              alt={image.alt}
+              class="w-full h-auto mt-auto"
+            />
+          )}
+
+          {button && (
+            <a
+              href={button.url}
+              target={button.url.startsWith("https") ? "_blank" : "_self"}
+              class="no-underline inline-block mt-auto"
+            >
+              <div
+                class:list={[`linaro-gradient-button mt-auto`, styles?.button]}
+              >
+                {button.text}
+              </div>
+            </a>
+          )}
+        </li>
+      );
 
       return (
         <>
-          <li class:list={[styles?.card, style]}>
-            {icon && <Icon name={icon} size={100} class="my-0" />}
-            {title && (
-              <h3 class:list={[styles?.card_title, "text-4xl my-5 z-50"]}>
-                {title}
-              </h3>
-            )}
-
+          {gradient_border ? (
             <div
-              class:list={[
-                `text-xl prose-a:text-blue-300 text-inherit`,
-                styles?.content,
-              ]}
-              set:html={content}
-            />
-
-            {button && (
-              <a
-                href={button.url}
-                target={button.url.startsWith("https") ? "_blank" : "_self"}
-                class="no-underline inline-block mt-auto"
-              >
-                <div
-                  class:list={[
-                    `linaro-gradient-button mt-auto`,
-                    styles?.button,
-                  ]}
-                >
-                  {button.text}
-                </div>
-              </a>
-            )}
-          </li>
+              id="gradient-border-container"
+              class:list={[styles?.gradient_border_container]}
+            >
+              {cardContent}
+            </div>
+          ) : (
+            cardContent
+          )}
           {divider && !isLast && (
             <li class="not-prose w-[100px] h-[2px] bg-gradient-to-r md:bg-gradient-to-b from-transparent via-white to-transparent opacity-50 my-4 md:w-[2px] md:h-[160px] md:mx-4" />
           )}
