add phone input and other changes

--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -10,6 +10,7 @@ const inputFields = [
   { name: "customfield_13156", label: "Last Name", type: "text" },
   { name: "email", label: "Email", type: "email" },
   { name: "customfield_13368", label: "Company Name", type: "text" },
+  { name: "telephone_number", label: "Telephone Number", type: "tel" },
 ];
 ---
 
