--- a/src/components/sections/CardGrid.astro
+++ b/src/components/sections/CardGrid.astro
@@ -18,14 +18,16 @@ const { cards, styles, divider, gradient_border } = Astro.props;
         index,
       ) => {
         const content = text ? await marked.parse(text) : null;
+        const titleText = title ? await marked.parseInline(title) : null;
         const isLast = index === cards.length - 1;
         const cardContent = (
           <li class:list={[styles?.card, style]}>
             {icon && <Icon name={icon} size={100} class="my-0" />}
             {title && (
-              <h3 class:list={[styles?.card_title, "text-4xl my-5 z-50"]}>
-                {title}
-              </h3>
+              <h3
+                class:list={[styles?.card_title, "text-4xl my-5 z-50"]}
+                set:html={titleText}
+              />
             )}
 
             <div
