Add Friendly Captcha to contact form

--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -61,6 +61,7 @@ const inputFields = [
       placeholder="How can Linaro help you?"
       class="text-black pl-2 h-12 w-full h-24"></textarea>
     <slot />
+    <div id="friendly-captcha-widget" class="frc-captcha"></div>
     <div>
       <input
         type="checkbox"
@@ -128,3 +129,16 @@ const inputFields = [
     }
   </div>
 </div>
+<script>
+  import { FriendlyCaptchaSDK } from "@friendlycaptcha/sdk";
+
+  if (typeof document !== "undefined") {
+    const mount = document.querySelector("#friendly-captcha-widget");
+    if (mount) {
+      new FriendlyCaptchaSDK().createWidget({
+        element: mount,
+        sitekey: import.meta.env.PUBLIC_FRIENDLY_CAPTCHA_SITEKEY,
+      });
+    }
+  }
+</script>
