--- a/src/components/sections/TeamMembers.astro
+++ b/src/components/sections/TeamMembers.astro
@@ -35,15 +35,21 @@ const people = await getEntries(members);
         class="gap-2 justify-center flex flex-wrap mx-auto"
         style="align-items: stretch;"
       >
-        {people.map((x) => (
-          <MemberCard
-            id={x.slug + Astro.props.id}
-            name={x.data.name}
-            title={x.data.title}
-            image={x.data.image}
-            info={x.body}
-          />
-        ))}
+        {people.map((x) => {
+          let displayTitle = x.data.title;
+          if (id === "bod" || id === "exec") {
+            displayTitle = displayTitle.replace(/\s+at Linaro$/i, "");
+          }
+          return (
+            <MemberCard
+              id={x.slug + Astro.props.id}
+              name={x.data.name}
+              title={displayTitle}
+              image={x.data.image}
+              info={x.body}
+            />
+          );
+        })}
       </ul>
     </div>
   )
