--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -129,7 +129,7 @@ const inputFields = [
     }
   </div>
 </div>
-<script>
+<!-- <script>
   import { FriendlyCaptchaSDK } from "@friendlycaptcha/sdk";
 
   if (typeof document !== "undefined") {
@@ -141,4 +141,4 @@ const inputFields = [
       });
     }
   }
-</script>
+</script> -->
