--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -223,16 +223,11 @@ const { title, description, type = "website", image } = Astro.props;
         button?.classList.add("hidden");
         loader?.classList.remove("hidden");
 
-        fetch(
-          "https://avqfk3gzg2.execute-api.us-east-1.amazonaws.com/prod/formSubmit",
-          {
-            method: "POST",
-            body: JSON.stringify(payload),
-            headers: {
-              "X-Api-Key": "ox9fSkYfRK16mxy5Gv6pM121H7iAubAQ6uzsDmoW",
-            },
-          },
-        )
+        fetch("/api/formSubmit", {
+          method: "POST",
+          body: JSON.stringify(payload),
+          headers: { "Content-Type": "application/json" },
+        })
           .then((response) => {
             return response.json();
           })
