point contact to main and add captcha to webinar form

--- a/src/components/forms/WebinarContactForm.astro
+++ b/src/components/forms/WebinarContactForm.astro
@@ -114,6 +114,7 @@ const inputFields = [
         ></label
       >
     </div>
+    <div id="friendly-captcha-widget" class="frc-captcha"></div>
     <div class="flex gap-8">
       <button type="submit" class="linaro-gradient-button" id="contact-submit"
         >Submit</button
