--- a/src/components/forms/WhitepaperContactForm.astro
+++ b/src/components/forms/WhitepaperContactForm.astro
@@ -100,6 +100,7 @@ const inputFields = [
       </div>
     </div>
     <div>
+      <div id="friendly-captcha-widget" class="frc-captcha"></div>
       <input type="checkbox" name="agreed" id="agreed" class="mr-2" required />
       <label for="agreed" class="text-white"
         >I’ve read and agreed to Linaro’s <a
