--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -17,7 +17,7 @@ if (content) {
 <div class:list={["items-center gap-12", styles?.card]}>
   <article
     set:html={markdownContent}
-    class:list={["text-white", styles.content]}
+    class:list={["text-white w-2/3", styles.content]}
   />
   <ContactForm
     form_id={form_id}
