--- a/src/components/sections/TwoColumn.astro
+++ b/src/components/sections/TwoColumn.astro
@@ -5,35 +5,79 @@ import { marked } from "marked";
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 
 type Props = z.infer<typeof twoColumnSchema>;
-const { columns, container_styles } = Astro.props;
+const { columns, container_styles, bottom_fade } = Astro.props;
 ---
 
-<div class:list={["flex flex-col lg:flex-row ", container_styles]}>
-  {
-    columns.map((column) => {
-      if (column.type === "text") {
-        const markdown = marked.parse(column.text_content);
-        return (
-          <div class:list={[column.styles]}>
-            <h3 class:list={["text-4xl my-5"]}>{column.title}</h3>
-            <p set:html={markdown} />
-          </div>
-        );
-      }
+{
+  bottom_fade ? (
+    <div class="relative overflow-visible w-full">
+      <div class="relative z-10">
+        <div class:list={["flex flex-col lg:flex-row pb-16", container_styles]}>
+          {columns.map((column) => {
+            if (column.type === "text") {
+              const markdown = marked.parse(column.text_content);
+              return (
+                <div class:list={[column.styles]}>
+                  <h3 class="text-4xl my-5">{column.title}</h3>
+                  <p set:html={markdown} />
+                </div>
+              );
+            }
 
-      if (column.type === "image") {
-        if (column.imgContainer) {
+            if (column.type === "image") {
+              return column.imgContainer ? (
+                <div>
+                  <CloudinaryImg
+                    {...column.image}
+                    class:list={[column.styles]}
+                  />
+                </div>
+              ) : (
+                <CloudinaryImg {...column.image} class:list={[column.styles]} />
+              );
+            }
+          })}
+        </div>
+      </div>
+      <div
+        class="
+      pointer-events-none
+      absolute
+      left-1/2
+      bottom-0
+      h-[130px]
+      w-screen
+      -translate-x-1/2
+      z-0
+      bg-gradient-to-t
+      from-white/20
+      to-white/0
+    "
+      />
+    </div>
+  ) : (
+    <div class:list={["flex flex-col lg:flex-row", container_styles]}>
+      {columns.map((column) => {
+        if (column.type === "text") {
+          const markdown = marked.parse(column.text_content);
           return (
+            <div class:list={[column.styles]}>
+              <h3 class="text-4xl my-5">{column.title}</h3>
+              <p set:html={markdown} />
+            </div>
+          );
+        }
+
+        if (column.type === "image") {
+          return column.imgContainer ? (
             <div>
               <CloudinaryImg {...column.image} class:list={[column.styles]} />
             </div>
-          );
-        } else {
-          return (
+          ) : (
             <CloudinaryImg {...column.image} class:list={[column.styles]} />
           );
         }
-      }
-    })
-  }
-</div>
+      })}
+    </div>
+  )
+}
